add prettier config

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "backEnd"
   ],
   "author": "Kamran Khan and Prof Dr. Ali Ahmad",
-
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
   }
 }
